new proj/src/objects/SFDC_Support_Case__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account for Partner user creation</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SFDC Support Cases</relationshipLabel>
        <relationshipName>SFDC_Support_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bigmachines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ServiceMax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver_Response__c</fullName>
        <label>Approver Response</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assignment_to_Workgroup_Name__c</fullName>
        <label>Assignment to Workgroup Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BM_Provision_Request_Approver__c</fullName>
        <description>stores BM Provision Request Approver&apos;s email address.</description>
        <label>BM Provision Request Approver</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Tier__c</fullName>
        <label>Business Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Drilling &amp; Surface (D&amp;S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lufkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsea (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMS</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <picklist>
            <picklistValues>
                <fullName>Drilling &amp; Surface (D&amp;S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTS Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTS Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsea (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMS Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMS Unit</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Caller_SSO_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>User facing the Issue</inlineHelpText>
        <label>Caller / User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFDC_Support_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select contact related to selected Account</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SFDC Support Cases</relationshipLabel>
        <relationshipName>SFDC_Support_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Existing_User_Risk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Existing User (Risk)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFDC_Support_Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_Channel_Sales_Manager_email_address__c</fullName>
        <description>For Partner Access</description>
        <label>GE Channel Sales Manager email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>I_need_assistance_with__c</fullName>
        <label>I need assistance with</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts &amp; Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk / Deal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quotes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role / Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports &amp; Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment &amp; Recommendations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case (Services)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Details__c</fullName>
        <label>Issue Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_User_Risk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New User Risk</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFDC_Support_Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Open_CI_Search_Code__c</fullName>
        <label>Open CI Search Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRM_SSO_Id__c</fullName>
        <description>For PRM users</description>
        <displayFormat>PRM-{00000}</displayFormat>
        <label>PRM SSO Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>P_L__c</fullName>
        <label>P&amp;L</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>People_Affected__c</fullName>
        <label>People Affected</label>
        <picklist>
            <picklistValues>
                <fullName>One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Few</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Many</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <label>Quote Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Affected__c</fullName>
        <label>Record Affected</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Email__c</fullName>
        <label>Requester Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Risk_History_Data_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Risk History Data Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Update_Single_Multiple__c</fullName>
        <label>Risk Update (Single / Multiple)</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TSG_Priority__c</fullName>
        <label>TSG Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_3__c</fullName>
        <label>Tier 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>BreakFix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Request &amp; Troubleshoot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BigMachines User Provision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Ticket__c</fullName>
        <label>Type of Ticket</label>
        <picklist>
            <picklistValues>
                <fullName>Helpdesk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Approver Add New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Approver Missing / Incorrect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_First_Name__c</fullName>
        <label>User First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_SSO__c</fullName>
        <label>User SSO</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SFDC Support Case</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SFDC Support Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SFDC Support Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>